# mcrs

./: Cargo.toml  README.MD  cheats.md
.github/workflows/: rust.yml
src/: main.rs
src/net/: connection.rs  handshake.rs  login.rs  macros.rs  mod.rs  packet.rs  status.rs
src/net/play/: mod.rs
src/net/proto/: ints.rs  mod.rs  scalars.rs  string.rs  varint.rs
src/server/: mod.rs
src/types/: text.rs
