[package]
name = "mcrs"
version = "0.1.0"
authors = ["Vincent Lee <vincent.lee@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "^1"
crossbeam = "^0.7"
anyhow = "^1"
log = "^0.4"
simple_logger = "^1"
